--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,6 +107,7 @@
 	            <div class="row">
 	            	<div class="col-sm-5 more-features-box wow fadeInLeft">
 	                    <img src="assets/img/devices/iphone.png" alt="">
+                      <%= image_tag "devices/iphone.png" %>
 	                </div>
 	                <div class="col-sm-7 more-features-box wow fadeInUp">
 
