not sure what to do here

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -274,6 +274,7 @@
 	                			<div role="tabpanel" class="tab-pane fade" id="tab3">
 	                				<div class="testimonial-image">
 	                					<%= image_tag "testimonials/3.jpg" %> alt="" data-at2x="assets/img/testimonials/3.jpg">
+                            <!-- wasn't sure what to do with the alt ^ -->
 	                				</div>
 	                				<div class="testimonial-text">
 		                                <p>
