bunch of changes

--- a/app/views/grayscales/_about.html.erb
+++ b/app/views/grayscales/_about.html.erb
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <h2>DJudd Plumbing</h2>
-            <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-        </div>
+            <p>David Judd Plumbing, a family owned and operated business, has been serving the Nothern Virginia area since 1992.<p>
+            <p>David Judd, licensed in both plumbing and gas along with 40 plus years in the industry, is equiped with vast knowledge in both commercial and residential plumbing systems.<p>
+            <p>David, along with his sons, come highly recomended amongst those they have serviced and can assist in your plumbing projects both big and small.<p>
+            <p>Our technicians pride theirselves in competent service and customer satisfaction. David Judd Plumbing offers a variety of services in both residential and commercial work. It includes but is not limited to:
     </div>
 </section>
