--- a/app/views/grayscales/index.html.erb
+++ b/app/views/grayscales/index.html.erb
@@ -2,7 +2,8 @@
 	<%= render 'navigation' %>
 	<%= render 'header' %>
 	<%= render 'about' %>
-	<%= render 'download' %>
+	<%= render 'services' %>
 	<%= render 'contact' %>
+	<%= render 'testimonials' %>
 	<%= render 'map' %>
 	<%= render 'footer' %>
