--- a/app/views/grayscales/_navigation.html.erb
+++ b/app/views/grayscales/_navigation.html.erb
@@ -17,7 +17,7 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#download">Services</a>
+                    <a class="page-scroll" href="#services">Services</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
