--- a/app/views/grayscales/_services.html.erb
+++ b/app/views/grayscales/_services.html.erb
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Services</h2>
                 <p>Water heaters, Garbage disposals, Toilets, Dishwashers, Faucets, Sump and sewer ejector pumps, Pedestal and vanity sinks, Showers and tubs , Water filtration and treatment systems, Instant hots, Fixing leaks, Water service</p>
-                <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Send Email Here</a>
+                <!-- <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Send Email Here</a> -->
             </div>
         </div>
     </div>
