--- a/app/views/grayscales/_testimonials.html.erb
+++ b/app/views/grayscales/_testimonials.html.erb
@@ -3,8 +3,10 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Testimonials</h2>
-                <p>Water heaters, Garbage disposals, Toilets, Dishwashers, Faucets, Sump and sewer ejector pumps, Pedestal and vanity sinks, Showers and tubs , Water filtration and treatment systems, Instant hots, Fixing leaks, Water service</p>
-                <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Send Email Here</a>
+                <p>Have we done good work for you in the past?
+                <br />
+                Please feel free to leave a testimonial for us!</p>
+                <a href="" class="btn btn-default btn-lg">Create Testimonial</a>
             </div>
         </div>
     </div>
