fixed map and routing problems

--- a/app/views/grayscales/_navigation.html.erb
+++ b/app/views/grayscales/_navigation.html.erb
@@ -25,6 +25,9 @@
                 <li>
                     <a class="page-scroll" href="#testimonials">Testimonials</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#map">Locations</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
