--- a/app/views/grayscales/_map.html.erb
+++ b/app/views/grayscales/_map.html.erb
@@ -8,6 +8,7 @@
 </section>
 
 <div id="map">
+		<center>
 	    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99283.57983104479!2d-77.41910168396869!3d38.955694463810204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64047261665e5%3A0x63dfafe8a871ae9f!2sReston%2C+VA!5e0!3m2!1sen!2sus!4v1503958675886"></iframe>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49539.468570899226!2d-77.59317321824788!3d39.101534370275566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63d83d53b39bb%3A0xb1920f56e3f9bdf3!2sLeesburg%2C+VA!5e0!3m2!1sen!2sus!4v1503957836267"></iframe>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49719.27628744533!2d-77.47580802014352!3d38.84494597204752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b644817a4a9ef3%3A0x9932b1116c9da2c!2sCentreville%2C+VA!5e0!3m2!1sen!2sus!4v1503958721933"></iframe>
@@ -16,7 +17,7 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49520.27422081554!2d-77.81690546804545!3d39.12884144342706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b60e8a9803db9d%3A0x85c188e2ab4e10bf!2sRound+Hill%2C+VA+20141!5e0!3m2!1sen!2sus!4v1503958524834"></iframe>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24811.559869136905!2d-77.54877416005563!3d38.982339501763676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64076e9693669%3A0xb268041272e2cbc6!2sBrambleton%2C+VA!5e0!3m2!1sen!2sus!4v1503958566266"></iframe>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24791.17308082714!2d-77.418708109949!3d39.04047612378929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63a1ff062f031%3A0xd76b0b5b48eecdef!2sPotomac+Falls%2C+VA+20165!5e0!3m2!1sen!2sus!4v1503958615402"></iframe>
-		</iframe>
+		</center>
 </div>
 
 <!-- width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"  -->
