playing with pictures

--- a/app/views/grayscales/_contact.html.erb
+++ b/app/views/grayscales/_contact.html.erb
@@ -3,7 +3,9 @@
         <div class="col-lg-8 col-lg-offset-2">
             <h2>Contact Djudd</h2>
             <p>Please email or contact us for Estimations, Jobs or just to find out more</p>
-            <p><a href="mailto:Djudd@yahoo.com">Djudd@yahoo.com</a>
+            <p><a href="tel:5551234567">Call (555)123-4567</a>
+              <br />
+            <a href="mailto:Djudd@yahoo.com">Djudd@yahoo.com</a>
             </p>
             <ul class="list-inline banner-social-buttons">
                 <li>
