--- a/app/assets/stylesheets/grayscale/grayscale.css
+++ b/app/assets/stylesheets/grayscale/grayscale.css
@@ -8,8 +8,8 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: white;
-    background-color: black;
+    color: #fff;
+    background-color: #000;
 }
 
 html {
@@ -158,6 +158,8 @@ a:focus {
 .intro .intro-body {
     display: table-cell;
     vertical-align: middle;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.2);
 }
 
 .intro .intro-body .brand-heading {
@@ -308,6 +310,8 @@ a:focus {
     border: 1px solid #42dca3;
     color: #42dca3;
     background-color: transparent;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .btn-default:hover,
