--- a/app/views/grayscales/_about.html.erb
+++ b/app/views/grayscales/_about.html.erb
@@ -1,7 +1,7 @@
 <section id="about" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <h2>DJudd Plumbing</h2>
+            <h2>Judd Plumbing</h2>
             <p>David Judd Plumbing, a family owned and operated business, has been serving the Nothern Virginia area since 1992.<p>
             <p>David Judd, licensed in both plumbing and gas along with 40 plus years in the industry, is equiped with vast knowledge in both commercial and residential plumbing systems.<p>
             <p>David, along with his sons, come highly recomended amongst those they have serviced and can assist in your plumbing projects both big and small.<p>
