--- a/app/views/testimonials/show.html.erb
+++ b/app/views/testimonials/show.html.erb
@@ -1,9 +1,9 @@
 <%= @testimonial.title %>
 
-<%= link_to 'All Testimonials', testimonial_posts_path, class: 'btn btn-primary' %>
+<%= link_to 'All Testimonials', testimonials_path, class: 'btn btn-primary' %>
 
       <table class="table table.hover">
           <tr>
-              <th> Testimonial Name </th>
+              <th> <%= @testimonial.body %> </th>
           </tr>
       </table>
