--- a/app/views/grayscales/_contact.html.erb
+++ b/app/views/grayscales/_contact.html.erb
@@ -1,7 +1,7 @@
 <section id="contact" class="container content-section text-center">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <h2>Contact Djudd</h2>
+            <h2>Contact Us!</h2>
             <p>Please email or contact us for Estimations, Jobs or just to find out more</p>
             <p><a href="tel:5551234567">Call (555)123-4567</a>
               <br />
