--- a/app/views/grayscales/_header.html.erb
+++ b/app/views/grayscales/_header.html.erb
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="brand-heading">DJudd Plumbing</h1>
+                    <h1 class="brand-heading">Judd Plumbing</h1>
                     <p class="intro-text">Welcome to the Judd Family Plumbing Website!</p>
                     <a href="#about" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
