--- a/app/views/grayscales/_testimonials.html.erb
+++ b/app/views/grayscales/_testimonials.html.erb
@@ -6,7 +6,7 @@
                 <p>Have we done good work for you in the past?
                 <br />
                 Please feel free to leave a testimonial for us!</p>
-                <a href='/views/testimonials' class="btn btn-default btn-lg">Create Testimonial</a>
+                <%= link_to '<button class="btn btn-default btn-lg" type="button">Create Testimonial</button>'.html_safe, testimonials_path %>
             </div>
         </div>
     </div>
