--- a/app/views/testimonials/index.html.erb
+++ b/app/views/testimonials/index.html.erb
@@ -30,4 +30,6 @@
 <td><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete, class: 'btn btn-danger' %></td>
 <% end %>
 
+#ask how to get link to home working
+
 <hr />
