--- a/app/views/testimonials/index.html.erb
+++ b/app/views/testimonials/index.html.erb
@@ -1,4 +1,4 @@
-<h1> Testimonials </h1>
+<center><h1> Testimonials </h1>
 
 <% if @testimonials.any? %>
       <table class="table table.hover">
@@ -7,13 +7,15 @@
           </tr>
           <% @testimonials.each do |testimonial| %>
           <tr>
+            <td><%= testimonial.name %></td>
               <td><%= testimonial.title %></td>
+              <td><%= testimonial.location %></td>
               <td><%= testimonial.body %></td>
-              <td><%= link_to 'View Testimonial', testimonial_path(testimonial), class: 'btn btn-primary' %></td>
-              <td><%= link_to 'Edit Testimonial', edit_testimonial_path(testimonial), class: 'btn btn-warning' %></td>
+              <td><%= link_to 'View Testimonial', testimonial_path(testimonial), class: 'btn btn-outline-primary' %></td>
+              <td><%= link_to 'Edit Testimonial', edit_testimonial_path(testimonial), class: 'btn btn-outline-primary' %></td>
               <td><%= link_to 'Delete Testimonial',
                     testimonial_path(testimonial),
-                    class: 'btn btn-danger',
+                    class: 'btn btn-outline-primary',
                     data: { confirm: 'Really Delete?'},
                     method: :delete %></td>
           </tr>
@@ -23,11 +25,13 @@
 
 <% else %>
   <h3>No Testimonials Found, Please Create One!</h3>
-  <td><%= link_to 'Create Testimonial', new_testimonial_path, class: 'btn btn-primary' %></td>
+  <td><%= link_to 'Create Testimonial', new_testimonial_path, class: 'btn btn-outline-primary' %></td>
 <% end %>
+
+<%= link_to "HomePage", root_path, class: 'btn btn-outline-primary'%>
 
 <% if current_user %>
-<td><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete, class: 'btn btn-danger' %></td>
+<td><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete, class: 'btn btn-outline-primary' %></td>
 <% end %>
 
-<hr />
+<hr /></center>
