--- a/app/views/testimonials/new.html.erb
+++ b/app/views/testimonials/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New Post!</h1>
+<center><h1>Create A New Testimonial!</h1>
 <hr />
 
 <%= render(partial: 'form') %>
+
+<%= link_to "Back to Home", root_path, class: 'btn btn-outline-primary'%></center>
