--- a/app/views/testimonials/index.html.erb
+++ b/app/views/testimonials/index.html.erb
@@ -1,4 +1,5 @@
-<center><h1> Testimonials </h1>
+<center>
+<h1> Testimonials </h1>
 
 <% if @testimonials.any? %>
       <table class="table table.hover">
@@ -24,8 +25,7 @@
 
 
 <% else %>
-  <h3>No Testimonials Found, Please Create One!</h3>
-  <td><%= link_to 'Create Testimonial', new_testimonial_path, class: 'btn btn-outline-primary' %></td>
+  <h3><%= link_to 'Create Testimonial', new_testimonial_path, class: 'btn-lg btn-outline-primary' %></h3>
 <% end %>
 
 <%= link_to "HomePage", root_path, class: 'btn btn-outline-primary'%>
@@ -34,4 +34,5 @@
 <td><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete, class: 'btn btn-outline-primary' %></td>
 <% end %>
 
-<hr /></center>
+<hr />
+</center>
