--- a/app/assets/stylesheets/testimonials.css
+++ b/app/assets/stylesheets/testimonials.css
@@ -1,3 +1,11 @@
-// Place all the styles related to the testimonials controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+div {
+    height: 200px;
+    width: 400px;
+    background: black;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
+}
