--- a/app/assets/stylesheets/testimonials.css
+++ b/app/assets/stylesheets/testimonials.css
@@ -1,11 +1,6 @@
-div {
-    height: 200px;
-    width: 400px;
-    background: black;
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -200px;
+.index {
+    background-color: green;
 }
