working on homepage stuff

--- a/app/views/grayscales/_testimonials.html.erb
+++ b/app/views/grayscales/_testimonials.html.erb
@@ -1,7 +1,6 @@
-<section id="testimonials" class="content-section text-center">
-    <div class="download-section">
-        <div class="container">
-            <div class="col-lg-8 col-lg-offset-2">
+<section id="testimonials" class="container content-section text-center">
+      <div class="container">
+          <div class="col-lg-8 col-lg-offset-2">
                 <h2>Testimonials</h2>
                 <p>Have we done good work for you in the past?
                 <br />
@@ -11,6 +10,9 @@
         </div>
     </div>
 </section>
+
+</br>
+</br>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
