--- a/app/views/grayscales/_contact.html.erb
+++ b/app/views/grayscales/_contact.html.erb
@@ -1,4 +1,5 @@
-<section id="contact" class="container content-section text-center">
+<section id="contact" class="content-section text-center">
+  <div class="download-section">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <h2>Contact Us!</h2>
